gateway controller
