# docs/swagger.yaml
@@ -66,7 +66,21 @@ info:
   title: Go Microservice Gateway
   version: 0.1.0
 paths:
-  /HealthCheck:
+  /api/CallMs:
+    post:
+      consumes:
+      - application/json
+      description: It provides an interface for calling registered microservices
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.MessageRespDto'
+      tags:
+      - Gateway
+  /api/HealthCheck:
     get:
       consumes:
       - application/json
@@ -83,7 +97,7 @@ paths:
           schema:
             $ref: '#/definitions/dto.ErrRespDto'
       tags:
-      - Default
+      - Gateway
   /api/Microservices:
     get:
       consumes:
